--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -2,18 +2,19 @@
 
 <html>
 
-<head>
-    <title>About</title>
-    <link rel="icon" href="/img/weather.png">
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
+    <head>
+        <title>About</title>
+        <link rel="icon" href="/img/weather.png">
+        <link rel="stylesheet" href="/css/styles.css">
+    </head>
 
-<body>
-    <div class="main-content">
-        {{>header}}
-        <img src="/img/Daniel.jpg" class="portrait">
-    </div>
-    {{>footer}}
-</body>
+    <body>
+        <div class="main-content">
+            {{>header}}
+            <p>This site was created by DANPAL. it uses data from mapbox.com and darksky.net</p>
+            <img src="/img/Daniel.jpg" class="portrait">
+        </div>
+        {{>footer}}
+    </body>
 
 </html>
